# generic-matrix-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust-ci.yml
.travis/: cargo-install
src/: lib.rs
