[package]
name = "generic-matrix"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gifnksm/generic-matrix-rs"
description = "Manipulations and data types that represent 2d matrix."

[dependencies]
num-traits = "0.1"
