[package]
name = "generic-matrix"
version = "0.2.0"
edition = "2018"
rust-version = "1.39.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gifnksm/generic-matrix-rs"
description = "Manipulations and data types that represent 2d matrix."

[dependencies]
num-traits = "0.2"
